--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nautilis-landing-page",
+  "name": "nautilus-landing-page",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
