--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "nautilus-landing-page",
   "version": "0.1.0",
-  "private": true,
+  "description": "Landing page for Nautilus: A Docker Compose Charting Tool",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nautilusapp/nautilus-landing-page.git"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
