--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "typescript": "^3.8.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "cross-env REACT_APP_PACKAGE_VERSION=1.0.0 react-scripts start",
+    "build": "cross-env REACT_APP_PACKAGE_VERSION=1.0.0 react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -48,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "cross-env": "^7.0.2",
     "node-sass": "^4.13.1"
   }
 }
