--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^16.12.0",
     "react-particles-js": "^2.7.1",
     "react-scripts": "3.4.0",
+    "react-scroll": "^1.7.16",
     "typescript": "^3.8.2"
   },
   "scripts": {
